# gdl-merchant

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE
Resources/tres-and-bushes/: trees.xml
Source/: CMakeLists.txt
Source/Engine/: CMakeLists.txt  Engine.hpp  Engine.hpp.cmake
Source/Engine/Interfaces/: Component.cpp  Component.hpp  ComponentsHolder.hpp
Source/Engine/Objects/: Caravan.cpp  Caravan.hpp  CaravanOrders.hpp  Events.hpp  Map.cpp  Map.hpp  MapObject.cpp  MapObject.hpp  MapVisualizer.cpp  MapVisualizer.hpp  Player.cpp  Player.hpp  PlayerProtectedData.cpp  PlayerProtectedData.hpp  TradeGoodsTypesContainer.cpp  TradeGoodsTypesContainer.hpp  Village.cpp  Village.hpp
Source/Engine/Utils/: AmbientObject.cpp  AmbientObject.hpp  BoundingCircle.cpp  BoundingCircle.hpp  Ownable.cpp  Ownable.hpp  Storage.cpp  Storage.hpp  StorageSlot.cpp  StorageSlot.hpp  TradeGoodsType.cpp  TradeGoodsType.hpp  Trader.cpp  Trader.hpp
Source/Game/: BuildConfig.hpp  BuildConfig.hpp.cmake  CMakeLists.txt  InputMapper.cpp  InputMapper.hpp  Urho3DApplication.cpp  Urho3DApplication.hpp
Source/Game/GameState/: GameInputListener.cpp  GameInputListener.hpp  GameStateInitializer.cpp  GameStateInitializer.hpp  MapObjectsVisualizer.cpp  MapObjectsVisualizer.hpp
Source/Tests/: CMakeLists.txt  CaravanMoveTest.cpp  CaravanMoveTest.hpp  CollisionTest.cpp  CollisionTest.hpp  OrdersSequenceTest.cpp  OrdersSequenceTest.hpp  TestCaravanMove.cpp  TestCaravanMove.hpp  TestCollision.cpp  TestCollision.hpp  TestOrdersSequence.cpp  TestOrdersSequence.hpp  TestVillageProductionAndPopulation.cpp  TestVillageProductionAndPopulation.hpp  TestXMLSerialization.cpp  TestXMLSerialization.hpp  Urho3DApplication.cpp  Urho3DApplication.hpp  VillageProductionAndPopulationTest.cpp  VillageProductionAndPopulationTest.hpp
