include_directories (${STATES_ENGINE_SDK}/include)
set (TARGET_NAME TestVillageProductionAndPopulation)
set (H_FILES TestVillageProductionAndPopulation.hpp)
set (CPP_FILES TestVillageProductionAndPopulation.cpp)
set (SOURCE_FILES ${H_FILES} ${CPP_FILES})
setup_main_executable ()
target_link_libraries (TestVillageProductionAndPopulation StatesEngine)
target_link_libraries (TestVillageProductionAndPopulation Engine)
add_test (NAME village_production_and_population COMMAND TestVillageProductionAndPopulation)

set (TARGET_NAME TestCollision)
set (H_FILES TestCollision.hpp)
set (CPP_FILES TestCollision.cpp)
set (SOURCE_FILES ${H_FILES} ${CPP_FILES})
setup_main_executable ()
target_link_libraries (TestCollision StatesEngine)
target_link_libraries (TestCollision Engine)
add_test (NAME collision COMMAND TestCollision)

set (TARGET_NAME TestCaravanMove)
set (H_FILES TestCaravanMove.hpp)
set (CPP_FILES TestCaravanMove.cpp)
set (SOURCE_FILES ${H_FILES} ${CPP_FILES})
setup_main_executable ()
target_link_libraries (TestCaravanMove StatesEngine)
target_link_libraries (TestCaravanMove Engine)
add_test (NAME caravan_move COMMAND TestCaravanMove)

set (TARGET_NAME TestOrdersSequence)
set (H_FILES TestOrdersSequence.hpp)
set (CPP_FILES TestOrdersSequence.cpp)
set (SOURCE_FILES ${H_FILES} ${CPP_FILES})
setup_main_executable ()
target_link_libraries (TestOrdersSequence StatesEngine)
target_link_libraries (TestOrdersSequence Engine)
add_test (NAME orders_sequence COMMAND TestOrdersSequence)
