include_directories (${STATES_ENGINE_SDK}/include)
set (TARGET_NAME TestVillageProductionAndPopulation)
set (H_FILES TestVillageProductionAndPopulation.hpp)
set (CPP_FILES TestVillageProductionAndPopulation.cpp)
set (SOURCE_FILES ${H_FILES} ${CPP_FILES})
setup_main_executable ()
target_link_libraries (TestVillageProductionAndPopulation StatesEngine)
target_link_libraries (TestVillageProductionAndPopulation Engine)
add_test (NAME village_production_and_population COMMAND TestVillageProductionAndPopulation)
